# julius-financeiro-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  config.py  julius.py  pyproject.toml
handlers/: commands.py  messages.py
services/: claude_service.py  sheets_service.py
utils/: constants.py
